Мой второй коммит

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Это мой первый гит репозиторий</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias nesciunt, unde neque nostrum accusamus ullam necessitatibus architecto quo et suscipit incidunt dolor quos? Atque cum odio sint ipsum consequatur placeat.</p>
 </body>
 </html>
