--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Это мой первый гит репозиторий</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias nesciunt, unde neque nostrum accusamus ullam necessitatibus architecto quo et suscipit incidunt dolor quos? Atque cum odio sint ipsum consequatur placeat.</p>
+    <h1>Это мой первый репозиторий</h1>
+    <p>Lorem ipsum dolor usamus ullam necodio sint ipsum consequatur placeat.</p>
 </body>
 </html>
